--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon" 
   ios: true
-  image_path: "assets/images/LCO WORKOUT LOGO transparent copy.png"
+  image_path: "assets/images/LCO_WORKOUT_LOGO_transparent.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,10 +50,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/audio/
+   - assets/images/
    - assets/images/LCO_WORKOUT_LOGO_transparent.png
    - assets/images/LCO_WORKOUT_LOGO.png
-   - assets/images/
-   - assets/audio/
+
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
